--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     background-color:#E6E6FA ;
     max-height: 30%;
     max-width: 100%;
-    margin-left: 20%;
+    margin-left: 10%;
     border-radius: 15px;
+    margin-right: 10%;
     
 }
 h2{
