--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@
 }
 h2{
     text-align: center;
-    margin-right: 285px;
+    margin-right: 10%;
+    margin-left: 10%;
+    font-size: 20px;
 }
 
 
